feat: add links for acronyms across document

--- a/tex/3-architektura/2-wymagania-i-zalozenia.tex
+++ b/tex/3-architektura/2-wymagania-i-zalozenia.tex
@@ -1,12 +1,13 @@
 \subsection{Wymagania i założenia}
 
-Po pierwsze Lupus ma przyjąć rolę \textit{regulatora} (ang. \textit{Control System}) znanego z teorii sterowania. Regulowanymi systemami mają być w tym przypadku systemy telekomunikacyjne. Aby odegrać rolę ENI System, platforma musi być w stanie zamodelować oraz uruchomić \underbar{dowolną} zamkniętą pętle sterowania, zwłaszcza te zawarte w \cite{enioverview}. 
+Po pierwsze Lupus ma przyjąć rolę \hyperlink{def:regulator}{\textit{regulatora}} (ang. \textit{Control System}) znanego z teorii sterowania. Regulowanymi systemami mają być w tym przypadku systemy telekomunikacyjne. Aby odegrać rolę \hyperlink{def:system-eni}{\textit{Systemu ENI}}, platforma musi być w stanie zamodelować oraz uruchomić \underbar{dowolną} zamkniętą pętlę sterowania, zwłaszcza te zawarte w \cite{enioverview}. 
 
-Z racji ogólności systemu oraz zwiększenia szansy na pozytywne przyjęcie w społeczności wybrano Kubernetes jako infrastrukturę dla platformy. Kubernetes natywnie używa zamkniętych pętli sterowania w swojej warstwie sterowania (ang. \textit{control plane}), z których użytkownik jest w stanie skorzystać za pomocą mechanizmów rozszerzeń Kubernetes takich jak \textit{Definicje Zasobów Własnych} (ang. \textit{Custom Resource Definitions (CRD)} oraz \textit{Wzorzec Operatora} (ang. )\textit{Operator Pattern}). Są to mechanizmy dobrze znane w branży. 
+Z racji ogólności systemu oraz zwiększenia szansy na pozytywne przyjęcie w społeczności wybrano Kubernetes jako infrastrukturę dla platformy. Kubernetes natywnie używa zamkniętych pętli sterowania w swojej \hyperlink{def:warstwa-sterowania}{\textit{warstwie sterowania}} (ang. \textit{control plane}), z których użytkownik jest w stanie skorzystać za pomocą mechanizmów rozszerzeń Kubernetes takich jak \hyperlink{def:crd}{\textit{Definicje Zasobów Własnych}} (ang. \textit{Custom Resource Definitions (CRD)}) oraz \hyperlink{def:wzorzec-operator}{\textit{Wzorzec Operatora}} (ang. \textit{Operator Pattern}). Są to mechanizmy dobrze znane w branży. 
+
 
 Wybór Kubernetes narzuca jednakże pewne ograniczenie. Regulowane procesy nie mogą odbywać się w czasie rzeczywistym. Warstwa sterowania Kubernetes działa nieco wolniej. 
 
-Lupus musi być "data-driven" co na polski można przetłumaczyć jako "sterowany danymi". Oznacza to, że platforma nie może narzucać żadnej postaci logiki pętli. Warstwa sterowania Kubernetes musi być w stanie interpretować zamiary użytkownika platformy, który może wyrazić dowolną pętle. Zamiary te wyrażone są właśnie w danych. 
+Lupus musi być "data-driven" co na polski można przetłumaczyć jako "sterowany danymi". Oznacza to, że platforma nie może narzucać żadnej postaci logiki pętli. Warstwa sterowania Kubernetes musi być w stanie interpretować zamiary użytkownika platformy, który może wyrazić dowolną pętle. Zamiary te wyrażone są w danych. 
 
 Logikę pętli możemy podzielić na dwie części: workflow pętli oraz części obliczeniowa. Workflow jest to zdefiniowane elementów oraz relacji między nimi. Częścią obliczeniową za to nazywamy procesowanie wykonywane przez konkretne elementy. Z racji podejścia "data-driven" nie możemy zaszyć części obliczeniowej w warstwie sterowania Kubernetes. Dlatego elementy odpowiedzialne za części obliczeniową są "na zewnątrz" pętli Lupus, przykładowo są to serwery HTTP, do których Lupus wykonując pętle może się odwołać.
 
