--- a/tex/5-test/3-wdrozenie-lupus.tex
+++ b/tex/5-test/3-wdrozenie-lupus.tex
@@ -158,7 +158,7 @@ A \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} dla \hyperlink{def:ele
 
 Każdy z \hyperlink{def:element-zewnetrzny}{\textbf{Elementów Zewnętrznych}} przygotowano jako aplikację Python emulującą serwer \hyperlink{def:opa}{\textbf{Open Policy Agent}}.
 
-Implementacje można znaleźć w \hyperref[appendix://TODO]{załączniku}.
+Implementacje można znaleźć w //TODO
 
 \subsubsection{Wyrażenie workflow pętli w notacji LupN}
 
@@ -171,7 +171,7 @@ Implementacje można znaleźć w \hyperref[appendix://TODO]{załączniku}.
 
 Element \texttt{demux} służy do rozdzielenia \hyperlink{def:dane}{\textbf{Danych}} na dwie części. Każde wdrożenie UPF ma swój dedykowany element \texttt{upf1} lub \texttt{upf2}, który obsługuje je według \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} przedstawionego w poprzedniej podsekcji. Elementy \texttt{upf1} oraz \texttt{upf2} niezależnie pobudzają endpoint \texttt{/api/data} \hyperlink{def:agent-egress}{\textbf{Agenta Egress}}.
 
-Kod \hyperlink{def:lupn}{\textbf{LupN}} znajduje się w \hyperref[appendix://TODO]{załączniku}. Ostatnim krokiem w celu uruchomienia pętli jest zaaplikowanie \hyperlink{def:plik-lupn}{\textbf{Pliku LupN}}.
+Kod \hyperlink{def:lupn}{\textbf{LupN}} znajduje się w //TODO. Ostatnim krokiem w celu uruchomienia pętli jest zaaplikowanie \hyperlink{def:plik-lupn}{\textbf{Pliku LupN}}.
 
 \subsubsection{Prezentacja działania jednej iteracji pętli}
 
