feat: add appendicies for section 5

--- a/tex/3-architektura/3-pojecia-i-zasady.tex
+++ b/tex/3-architektura/3-pojecia-i-zasady.tex
@@ -121,7 +121,10 @@ Jeden \hyperlink{def:element-lupus}{\textbf{Element Lupus}} może komunikować s
 
 Działanie pojedynczego \hyperlink{def:element-lupus}{\textbf{Elementu Lupus}} jest opisane poprzez \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}}. \hyperlink{def:akcja}{\textbf{Akcje}} wykonują różne operacje na \hyperlink{def:dane}{\textbf{Danych}}. Istnieje wiele rodzajów akcji, a kluczowym typem akcji jest "Send", która pozwala komunikować się \hyperlink{def:element-lupus}{\textbf{Elementowi Lupus}} z \hyperlink{def:element-zewnetrzny}{\textbf{Elementem Zewnętrznym}}. Inne typy akcji służą organizacji danych.
 
-% TODO: Dodać przykładowe workflow akcji
+\begin{figure}[!h]
+    \centering \includegraphics[width=1\linewidth]{33-workflow-akcji.png}
+    \caption{Przykładowe workflow akcji}\label{fig:33-workflow-akcji}
+\end{figure}
 
 Pełna specyfikacja \hyperlink{def:dane}{\textbf{Danych}} znajduje się w \hyperref[appendix:5]{Załączniku 5}, zaś pełna specyfikacja \hyperlink{def:akcja}{\textbf{Akcji}} w \hyperref[appendix:6]{Załączniku 6}.
 
