--- a/tex/4-implementacja/3-decyzje.tex
+++ b/tex/4-implementacja/3-decyzje.tex
@@ -220,7 +220,7 @@ W \hyperlink{def:lupus}{\textbf{Lupus}} występują dwa rodzaje \textit{workflow
     \item Węzły w \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}} komunikują się poprzez pamięć RAM zaalokowaną przez pojedynczy operator \hyperlink{def:element-lupus}{\textbf{Elementu Lupus}}.
 \end{itemize}
 
-Różnice są widoczne w specyfikacji \hyperlink{def:lupn}{\textbf{LupN}} //TODO.
+Różnice są widoczne w specyfikacji LupN w \hyperlink{appendix:3}{Załączniku 3}.
 
 \subsubsection{Funkcje użytkownika}\label{sec:funkcje-uzytkownika}
 
