--- a/tex/appendix/5-data.tex
+++ b/tex/appendix/5-data.tex
@@ -17,6 +17,6 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
     \item obiektem JSON z kluczami innymi niż \texttt{string}.
 \end{itemize}
 
-To, w jaki sposób można operować na \hyperlink{def:dane}{\textbf{Danych}}, prezentuje specyfikacja akcji //TODO
+To, w jaki sposób można operować na \hyperlink{def:dane}{\textbf{Danych}}, prezentuje specyfikacja akcji (\hyperref[appendix:6]{Załącznik 6}).
 
 // TODO: Opisać koncepcję wildcard oraz pojęcie pola danych.
