--- a/tex/appendix/6-akcje.tex
+++ b/tex/appendix/6-akcje.tex
@@ -2,7 +2,7 @@
 
 Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://github.com/0x41gawor/lupus/blob/master/docs/spec/actions.md}.
 
-Specyfikacja \hyperlink{def:akcja}{\textbf{Akcji}} w \hyperlink{def:lupn}{\textbf{LupN}} znajduje się w \hyperref[appendix://TODO]{Załączniku //TODO}. Niniejszy dokument prezentuje przykładowe działanie \hyperlink{def:akcja}{\textbf{Akcji}} na \hyperlink{def:dane}{\textbf{Danych}}.
+Specyfikacja \hyperlink{def:akcja}{\textbf{Akcji}} w \hyperlink{def:lupn}{\textbf{LupN}} znajduje się w \hyperref[appendix:3]{Załączniku 3}. Niniejszy dokument prezentuje przykładowe działanie \hyperlink{def:akcja}{\textbf{Akcji}} na \hyperlink{def:dane}{\textbf{Danych}}.
 
 \hyperlink{def:akcja}{\textbf{Akcje}} zostały opracowane jako najbardziej atomowe operacje, które, gdy zostaną odpowiednio połączone, stanowią narzędzie umożliwiające \hyperlink{def:projektant}{\textbf{Projektantowi Pętli}} pełne operowanie na \hyperlink{def:dane}{\textbf{Danych}}.
 
