--- a/tex/appendix/main.tex
+++ b/tex/appendix/main.tex
@@ -1,4 +1,3 @@
-
 % Obrazki i tabele w załącznikach nie trafiają do spisów
 \captionsetup[figure]{list=no}
 \captionsetup[table]{list=no}
@@ -9,3 +8,7 @@
 \input{tex/appendix/4-lupin-lupout.tex}
 \input{tex/appendix/5-data.tex}
 \input{tex/appendix/6-akcje.tex}
+\input{tex/appendix/7-test-agent-ingress.tex}
+\input{tex/appendix/8-test-agent-egress.tex}
+\input{tex/appendix/9-test-opa.tex}
+\input{tex/appendix/10-test-lupn.tex}
