--- a/tex/util/acronym-list.tex
+++ b/tex/util/acronym-list.tex
@@ -13,11 +13,11 @@
 \hypertarget{def:doswiadczenie}{}
 \acronym{Doświadczenie (ang. \textit{Experience})}{Proces zdobywania \hyperlink{def:wiedza}{wiedzy} przez system podczas funkcjonowania w środowisku docelowym}.
 
-\hypertarget{def:edukacja}{Edukacja}
+\hypertarget{def:edukacja}{}
 \acronym{Edukacja (ang. \textit{Education})}{Proces zdobywania \hyperlink{def:wiedza}{wiedzy} przez system poza środowiskiem docelowym, np. podczas trenowania modelu}.
 
-\hypertarget{def:wiedza}{Knowledge}
-\acronym{Wiedza (ang. \textit{Wiedza})}{Zestaw wzorców, które są wykorzystywane do wyjaśniania, a także przewidywania tego, co się wydarzyło, dzieje lub może się wydarzyć w przyszłości. Bazuje na danych, informacjach oraz umiejętnościach zdobytych poprzez \hyperlink{def:doswiadczenie}{doświadczenie} oraz \hyperlink{def:edukacja}{edukację}}
+\hypertarget{def:wiedza}{}
+\acronym{Wiedza (ang. \textit{Knowledge})}{Zestaw wzorców, które są wykorzystywane do wyjaśniania, a także przewidywania tego, co się wydarzyło, dzieje lub może się wydarzyć w przyszłości. Bazuje na danych, informacjach oraz umiejętnościach zdobytych poprzez \hyperlink{def:doswiadczenie}{doświadczenie} oraz \hyperlink{def:edukacja}{edukację}}
 
 \hypertarget{def:eni}{}
 \acronym{ENI}{Experiential Networked Intelligence}
