--- a/tex/appendix/4-lupin-lupout.tex
+++ b/tex/appendix/4-lupin-lupout.tex
@@ -15,7 +15,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 
 Jeśli \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} chce zasygnalizować, że można zaobserwować nowy stan \hyperlink{def:system-zarzadzany}{\textbf{Systemu Zarządzanego}} (co oznacza, że musi zostać uruchomiona nowa iteracja \hyperlink{def:zamknieta-petla-sterowania}{\textbf{Pętli Sterowania}}), musi zmodyfikować pole \texttt{Status.Input} w \textit{obiekcie API} \hyperlink{def:element-ingres}{\textbf{Elementu Ingress}}. Wartość umieszczona w tym polu będzie reprezentować nowy \hyperlink{def:stan-aktualny}{\textbf{Aktualny Stan}}.
 
-Pole \texttt{Status.Input} w \hyperlink{def:element-ingres}{\textbf{Ingress Element CR}} jest typu \texttt{RawExtension}, co oznacza, że podlega pod specyfikację \hyperlink{def:dane}{\textbf{Danych}} (\hyperref[appendix://TODO]{Załącznik //TODO}).
+Pole \texttt{Status.Input} w \hyperlink{def:element-ingres}{\textbf{Ingress Element CR}} jest typu \texttt{RawExtension}, co oznacza, że podlega pod specyfikację \hyperlink{def:dane}{\textbf{Danych}} (\hyperref[appendix:5]{Załącznik 5}).
 
 JSON przesłany w tym miejscu będzie stanowił \hyperlink{def:dane}{\textbf{Dane}} dla tego elementu.
 
