--- a/tex/4-implementacja/3-decyzje.tex
+++ b/tex/4-implementacja/3-decyzje.tex
@@ -211,7 +211,7 @@ Polimorfizm przez wskaźniki oferuje przejrzystą reprezentację danych, która 
 
 W \hyperlink{def:lupus}{\textbf{Lupus}} polimorfizm był potrzebny do reprezentacji różnych typów (odmian) niektórych \hyperlink{def:element}{\textbf{Obiektów LupN}}, takich jak \hyperlink{def:akcja}{\textbf{Actions}} lub \hyperlink{def:next}{\textbf{Next}}, dlatego wybrano polimorfizm poprzez wskaźniki oraz pole dyskryminatora.
 
-\subsubsection{Dwa rodzaje workflow}
+\subsubsection{Dwa rodzaje workflow}\label{sec:dwa-rodzaje-workflow}
 
 W \hyperlink{def:lupus}{\textbf{Lupus}} występują dwa rodzaje \textit{workflow}: \hyperlink{def:workflow-petli}{\textbf{Workflow Pętli}}, które definiuje przepływ pracy \hyperlink{def:element-lupus}{\textbf{Elementów Lupus}}, oraz \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}}, które definiuje przepływ \hyperlink{def:akcja}{\textbf{Akcji}} we wnętrzu pojedynczego elementu. Występują między nimi pewne różnice w możliwościach, wynikające ze sposobu implementacji komunikacji między ich węzłami.
 
