--- a/tex/appendix/1-definicje.tex
+++ b/tex/appendix/1-definicje.tex
@@ -48,7 +48,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 \acronym{Finalne dane (ang. \textit{Final Data})}{Postać danych po wykonaniu ostatniej akcji z workflow akcji Elementu Egress. To ona definiuje Akcję Sterującą.}
 
 \hypertarget{def:funkcje-uzytkownika}{}
-\acronym{Funkcje użytkownika (ang. \textit{User Functions})}{//TODO}
+\acronym{Funkcje użytkownika (ang. \textit{User Functions})}{Alternatywa dla wdrażania serwerów HTTP do prostych obliczeń. Funkcje użytkownika działają jak elementy zewnętrzne, ale są wykonywane w klastrze Kubernetes. Jest to jedna z dostępnych \hyperlink{def:destynacja}{Destynacji} w \hyperlink{def:lupn}{Lupn}.}
 
 \hypertarget{def:interfejs-lupin}{}
 \acronym{Interfejs Lupin (ang. \textit{Lupin interface})}{Interfejs wejściowy do Lupus. Implementować go musi Agent Ingress oraz Element Ingress.}
@@ -69,7 +69,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 \acronym{LupN (ang. \textit{LupN})}{Notacja do wyrażania workflow pętli za pomocą obiektów LupN. Zapisywana w pliku LupN.}
 
 \hypertarget{def:lupus}{}
-\acronym{Lupus (ang. \textit{Lupus})}{//TODO}
+\acronym{Lupus (ang. \textit{Lupus})}{System o proponowanej w pracy architekturze, który pełni rolę \hyperlink{def:system-sterowania}{Systemu Sterowania}.}
 
 \hypertarget{def:lupus-master}{}
 \acronym{Lupus Master (ang. \textit{Lupus Master})}{Nadzorca pojedynczej pętli Lupus. Odpowiedzialny za kreację obiektów Zasobu Lupus Element.}
@@ -83,7 +83,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 \hypertarget{def:operator-zasobu-master}{}
 \acronym{Operator Zasobu Master (ang. \textit{Master Operator})}{\textit{Kontroler} zasobu Master. Odpowiedzialny za interpretację workflow pętli notacji LupN i tworzenie obiektów Element.}
 
-\hypertarget{def:obiekt-lupn}{Obiekt LupN}
+\hypertarget{def:obiekt-lupn}{}
 \acronym{Obiekt LupN (ang. \textit{LupN Object})}{Obiekty składające się na składnię LupN za pomocą, których wyrażane jest workflow pętli}
 
 \hypertarget{def:operator-zasobu-element}{}
